# merian

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  imgui.ini  merian.sublime-project  meson.build  meson.options
src/ext/: meson.build  stb_image.cpp  stb_image_write.cpp
src/merian/: meson.build
src/merian-graph/: meson.build
src/merian-graph/connectors/: any_in.cpp  any_out.cpp  meson.build  vk_tlas_in.cpp  vk_tlas_out.cpp
src/merian-graph/graph/: graph.cpp  graph_connect.cpp  graph_description.cpp  graph_edit.cpp  graph_events.cpp  graph_load_store.cpp  graph_properties.cpp  meson.build  node.cpp  node_io.cpp  node_registry.cpp
src/merian-graph/nodes/: meson.build
src/merian-nodes/: meson.build
src/merian-nodes/ab_compare/: README.md  ab_compare.cpp  ab_compare.hpp
src/merian-nodes/accumulate/: README.md  accumulate.comp  accumulate.cpp  accumulate.hpp  calculate_percentiles.comp  meson.build
src/merian-nodes/add/: add.hpp
src/merian-nodes/autoexposure/: meson.build
src/merian-nodes/blit/: README.md  blit.hpp
src/merian-nodes/blit_external/: README.md  blit_external.hpp
src/merian-nodes/blit_glfw_window/: blit_glfw_window.hpp
src/merian-nodes/bloom/: bloom.cpp  bloom.hpp  bloom_separate.comp  layout.glsl  meson.build
src/merian-nodes/color_output/: README.md  color_output.cpp  color_output.hpp
src/merian-nodes/common/: bit_twiddling.glsl  bsdf_diffuse.glsl  bsdf_microfacet.glsl  bsdf_rough_diffuse.glsl  bsdf_volume.glsl  camera.glsl  colors_dng.glsl  colors_dtucs.glsl  colors_munsell.glsl  colors_rec2020.glsl  colors_srgb.glsl  colors_yuv.glsl  common.glsl  cubemap.glsl  gbuffer.glsl.h  grid.glsl  interpolate.glsl  microfacet_sampling.glsl  morton.glsl  normal_encode.glsl  phase_draine.glsl  phase_isotropic.glsl  phase_rayleigh.glsl  random.glsl  raytrace.glsl  reprojection.glsl  sampler.glsl  sampling.glsl  tonemap.glsl  types.glsl.h  von_mises_fisher.glsl
src/merian-nodes/compute_node/: compute_node.cpp  compute_node.hpp  meson.build
src/merian-nodes/connectors/: any_in.cpp  any_in.hpp  any_out.cpp  any_out.hpp  connector.hpp  connector_input.hpp  connector_output.hpp  host_ptr_in.hpp  host_ptr_out.hpp  managed_vk_buffer_in.cpp  managed_vk_buffer_in.hpp  managed_vk_buffer_out.cpp  managed_vk_buffer_out.hpp  managed_vk_image_in.cpp  managed_vk_image_in.hpp  managed_vk_image_out.cpp  managed_vk_image_out.hpp  meson.build  ptr_in.hpp  ptr_out.hpp  special_static_in.hpp  special_static_out.hpp  unmanaged_vk_image_out.cpp  vk_buffer_array_in.cpp  vk_buffer_array_in.hpp  vk_buffer_array_out.cpp  vk_buffer_array_out.hpp  vk_buffer_in.cpp  vk_buffer_in.hpp  vk_buffer_out.cpp  vk_buffer_out.hpp  vk_image_in.cpp  vk_image_in.hpp  vk_image_out.cpp  vk_image_out.hpp  vk_texture_array_in.cpp  vk_texture_array_in.hpp  vk_texture_array_out.cpp  vk_texture_array_out.hpp  vk_texture_in.cpp  (+4 more)
src/merian-nodes/exposure/: exposure.comp  exposure.cpp  exposure.hpp  histogram.comp  layout.glsl  luminance.comp  meson.build
src/merian-nodes/firefly/: README.md  firefly_filter.comp  firefly_filter.cpp  firefly_filter.hpp  firefly_filter_quartile.comp  graph_layout.glsl  meson.build
src/merian-nodes/fxaa/: README.md  fxaa.cpp  fxaa.hpp  meson.build
src/merian-nodes/glfw_window/: glfw_window.hpp
src/merian-nodes/graph/: connector.hpp  connector_input.hpp  connector_output.hpp  errors.hpp  graph.cpp  graph.hpp  graph_connect.cpp  graph_description.cpp  graph_edit.cpp  graph_events.cpp  graph_load_store.cpp  graph_properties.cpp  graph_run.hpp  meson.build  node.cpp  node.hpp  node_io.hpp  node_registry.cpp  node_registry.hpp  resource.hpp
src/merian-nodes/graph_old/: graph.cpp  graph.hpp  meson.build  node_io.cpp  node_utils.cpp  node_utils.hpp
src/merian-nodes/image/: README.md  image.cpp  image.hpp
src/merian-nodes/image_write/: README.md  image_write.cpp  image_write.hpp  meson.build
src/merian-nodes/mean/: README.md  image_to_buffer.comp  layout.glsl  mean.cpp  mean.hpp  meson.build  reduce_buffer.comp
src/merian-nodes/median_approx/: layout.glsl  median.cpp  median.hpp  median_histogram.comp  median_reduce.comp
src/merian-nodes/nodes/: meson.build
src/merian-nodes/resources/: buffer_array_resource.hpp  host_any_resource.hpp  host_ptr_resource.hpp  managed_vk_buffer_resource.hpp  managed_vk_image_resource.hpp  texture_array_resource.hpp  tlas_resource.hpp  vk_buffer_resource.hpp  vk_image_resource.hpp
src/merian-nodes/shadertoy/: README.md  meson.build  shadertoy.cpp  shadertoy.hpp
src/merian-nodes/shadertoy_spheres/: README.md  spheres.comp  spheres.cpp  spheres.hpp
src/merian-nodes/svgf/: README.md  config.h  meson.build  svgf.cpp  svgf.hpp  svgf_filter.comp  svgf_graph_layout.glsl  svgf_taa.comp  svgf_variance_estimate.comp
src/merian-nodes/taa/: README.md  config.h  taa.comp  taa.cpp  taa.hpp
src/merian-nodes/tonemap/: README.md  (+4 more)
src/merian-scene/: fbx_scene.cpp  gltf_scene.cpp  material_system.cpp  meson.build  scene.cpp  texture_manager.cpp  transform_vertex.slang
src/merian-shaders/: meson.build
subprojects/slang/: meson.build
tests/: meson.build  test.slang  test_bsdf.cpp  test_example.cpp  test_free_list.cpp  test_gltf_scene.cpp  test_graph_load_store.cpp  test_material_system.cpp  test_scene.cpp  test_slang_binding.cpp  test_slang_hot_reload.cpp  test_small_set.cpp  test_small_vector.cpp  test_texture_manager.cpp  test_versioned.cpp
tests/bsdf/: bsdf-checks.slang  bsdf-test-common.slang
tests/material_system/: read_material.slang  sample_material.slang
tests/slang_binding/: cb_in_cb.slang  cb_in_cb_depth3.slang  cb_with_buffer.slang  embedded_struct.slang  full_mix.slang  global_pb.slang  global_resource.slang  global_with_pb.slang  incremental_cb.slang  incremental_resource.slang  incremental_value.slang  matrix_type.slang  multi_entry_point.slang  multiple_cbs.slang  pb_with_cb.slang  scalar_types.slang  shared_cb.slang  single_cb.slang  single_nested_pb.slang  storage_buffer.slang  two_entry_point_pbs.slang  vector_types.slang
tests/texture_manager/: read_texture.slang
(+1367 files in other folders)
