option(
    'performance_profiling',
    type: 'boolean',
    value: false,
    description: 'Enables profiling within the merian library'
)

option('loglevel',
    type : 'combo',
    choices : ['auto', 'info', 'debug', 'trace'],
    value : 'auto'
)

option(
    'shaderc',
    type: 'feature',
    value: 'enabled',
    description: 'Enable support for shaderc.'
)
option(
    'tinygltf',
    type: 'feature',
    value: 'auto',
    description: 'Build with tinygltf support.'
)

