option(
    'performance_profiling',
    type: 'boolean',
    value: false,
    description: 'Enables profiling within the merian library'
)

option('loglevel',
    type : 'combo',
    choices : ['auto', 'info', 'debug', 'trace'],
    value : 'auto'
)

# Shader compiler
option(
    'shaderc',
    type: 'feature',
    value: 'auto',
    description: 'Enable support for shaderc.'
)
option(
    'glslang',
    type: 'feature',
    value: 'auto',
    description: 'Enable support for glslang.'
)

# Geometry and other features
option(
    'tinygltf',
    type: 'feature',
    value: 'auto',
    description: 'Build with tinygltf support.'
)
option(
    'tinybvh',
    type: 'feature',
    value: 'auto',
    description: 'Build with tinybvh support.'
)

