# Window backends
option(
    'glfw',
    type: 'feature',
    value: 'auto',
    description: 'Enable GLFW window backend.'
)
option(
    'sdl',
    type: 'feature',
    value: 'auto',
    description: 'Enable SDL3 window backend.'
)

option(
    'performance_profiling',
    type: 'boolean',
    value: true,
    description: 'Enables profiling within the merian library'
)

option('loglevel',
    type : 'combo',
    choices : ['auto', 'info', 'debug', 'trace'],
    value : 'auto'
)

# Shader compiler
option(
    'glslang',
    type: 'feature',
    value: 'auto',
    description: 'Enable support for glslang.'
)

# Geometry and other features
option(
    'tinygltf',
    type: 'feature',
    value: 'auto',
    description: 'Build with tinygltf support.'
)
option(
    'ufbx',
    type: 'feature',
    value: 'auto',
    description: 'Build with ufbx (FBX) support.'
)
option(
    'tinybvh',
    type: 'feature',
    value: 'auto',
    description: 'Build with tinybvh support.'
)

# Tests
option(
    'tests',
    type: 'boolean',
    value: false,
    description: 'Build and register tests.'
)

